[package]
name = "graphbench"
version = "0.1.3"
authors = ["felix <felix.reidl@gmail.com>"]
edition = "2021"
description = "A sparse graph analysis library"
license = "MIT"

[dependencies]
fxhash = "0.2.1"
flate2 = "1.0.16"
itertools = "0.9.0"
union-find-rs = "0.2.1"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[lib]
crate-type = ["lib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
