[package]
name = "graphbench"
version = "0.1.8  "
authors = ["felix <felix.reidl@gmail.com>"]
edition = "2021"
repository = "https://github.com/microgravitas/graphbench"
description = "A sparse graph analysis library"
readme = "README.md"
license = "MIT"


[dependencies]
fxhash = "0.2.1"
flate2 = "1.0.16"
itertools = "0.9.0"
union-find-rs = "0.2.1"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ] # Latex support in docs

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
